--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Spring 相关-->
-        <spring-boot.version>2.7.6</spring-boot.version>
+        <spring-boot.version>2.7.7</spring-boot.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
 
         <!-- DC3 Center 相关 -->
@@ -69,15 +69,17 @@
         <dc3.common.version>2022.2.3</dc3.common.version>
         <dc3.common.web.version>2022.2.3</dc3.common.web.version>
         <dc3.common.feign.version>2022.2.3</dc3.common.feign.version>
-        <dc3.common.log.version>2022.2.3</dc3.common.log.version>
         <dc3.common.mysql.version>2022.2.3</dc3.common.mysql.version>
         <dc3.common.redis.version>2022.2.3</dc3.common.redis.version>
+        <dc3.common.mongo.version>2022.2.3</dc3.common.mongo.version>
+        <dc3.common.rabbitmq.version>2022.2.3</dc3.common.rabbitmq.version>
+        <dc3.common.quartz.version>2022.2.3</dc3.common.quartz.version>
         <dc3.common.thread.version>2022.2.3</dc3.common.thread.version>
-        <dc3.common.exception.version>2022.2.3</dc3.common.exception.version>
-        <dc3.common.public.version>2022.2.3</dc3.common.public.version>
         <dc3.common.model.version>2022.2.3</dc3.common.model.version>
+        <dc3.common.public.version>2022.2.3</dc3.common.public.version>
         <dc3.common.constant.version>2022.2.3</dc3.common.constant.version>
-        <dc3.common.profiles.version>2022.2.3</dc3.common.profiles.version>
+        <dc3.common.exception.version>2022.2.3</dc3.common.exception.version>
+        <dc3.common.log.version>2022.2.3</dc3.common.log.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -420,6 +422,13 @@
                 <version>${dc3.common.web.version}</version>
             </dependency>
 
+            <!-- DC3 Common Feign -->
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-feign</artifactId>
+                <version>${dc3.common.feign.version}</version>
+            </dependency>
+
             <!-- DC3 Common MySQL -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
@@ -434,11 +443,25 @@
                 <version>${dc3.common.redis.version}</version>
             </dependency>
 
-            <!-- DC3 Common Feign -->
+            <!-- DC3 Common Mongo -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-feign</artifactId>
-                <version>${dc3.common.feign.version}</version>
+                <artifactId>dc3-common-mongo</artifactId>
+                <version>${dc3.common.mongo.version}</version>
+            </dependency>
+
+            <!-- DC3 Common RabbitMQ -->
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-rabbitmq</artifactId>
+                <version>${dc3.common.rabbitmq.version}</version>
+            </dependency>
+
+            <!-- DC3 Common Quartz -->
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-quartz</artifactId>
+                <version>${dc3.common.thread.version}</version>
             </dependency>
 
             <!-- DC3 Common Thread -->
@@ -448,11 +471,11 @@
                 <version>${dc3.common.thread.version}</version>
             </dependency>
 
-            <!-- DC3 Common Log -->
+            <!-- DC3 Common Model -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-log</artifactId>
-                <version>${dc3.common.log.version}</version>
+                <artifactId>dc3-common-model</artifactId>
+                <version>${dc3.common.model.version}</version>
             </dependency>
 
             <!-- DC3 Common Public -->
@@ -462,6 +485,13 @@
                 <version>${dc3.common.public.version}</version>
             </dependency>
 
+            <!-- DC3 Common Constant -->
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-constant</artifactId>
+                <version>${dc3.common.constant.version}</version>
+            </dependency>
+
             <!-- DC3 Common Exception -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
@@ -469,25 +499,11 @@
                 <version>${dc3.common.exception.version}</version>
             </dependency>
 
-            <!-- DC3 Common Profiles -->
+            <!-- DC3 Common Log -->
             <dependency>
                 <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-profiles</artifactId>
-                <version>${dc3.common.profiles.version}</version>
-            </dependency>
-
-            <!-- DC3 Common Model -->
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-model</artifactId>
-                <version>${dc3.common.model.version}</version>
-            </dependency>
-
-            <!-- DC3 Common Constant -->
-            <dependency>
-                <groupId>io.github.pnoker</groupId>
-                <artifactId>dc3-common-constant</artifactId>
-                <version>${dc3.common.constant.version}</version>
+                <artifactId>dc3-common-log</artifactId>
+                <version>${dc3.common.log.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
