--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.1.2</version>
+    <version>2023.1.3</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -56,30 +56,37 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Spring 相关-->
-        <spring-boot.version>2.7.9</spring-boot.version>
-        <spring-cloud.version>2021.0.6</spring-cloud.version>
+        <spring.boot.version>2.7.9</spring.boot.version>
+        <spring.cloud.version>2021.0.6</spring.cloud.version>
 
         <!-- DC3 Center 相关 -->
         <dc3.center.register.client.version>2023.1.2</dc3.center.register.client.version>
 
         <!-- DC3 Driver 相关 -->
-        <dc3.driver.sdk.version>2023.1.2</dc3.driver.sdk.version>
+        <dc3.driver.sdk.version>2023.1.3</dc3.driver.sdk.version>
 
         <!-- DC3 Common 相关 -->
-        <dc3.common.version>2023.1.2</dc3.common.version>
-        <dc3.common.web.version>2023.1.2</dc3.common.web.version>
-        <dc3.common.feign.version>2023.1.2</dc3.common.feign.version>
-        <dc3.common.mysql.version>2023.1.2</dc3.common.mysql.version>
-        <dc3.common.redis.version>2023.1.2</dc3.common.redis.version>
-        <dc3.common.mongo.version>2023.1.2</dc3.common.mongo.version>
-        <dc3.common.rabbitmq.version>2023.1.2</dc3.common.rabbitmq.version>
-        <dc3.common.quartz.version>2023.1.2</dc3.common.quartz.version>
-        <dc3.common.thread.version>2023.1.2</dc3.common.thread.version>
-        <dc3.common.model.version>2023.1.2</dc3.common.model.version>
-        <dc3.common.public.version>2023.1.2</dc3.common.public.version>
-        <dc3.common.constant.version>2023.1.2</dc3.common.constant.version>
-        <dc3.common.exception.version>2023.1.2</dc3.common.exception.version>
-        <dc3.common.log.version>2023.1.2</dc3.common.log.version>
+        <dc3.common.version>2023.1.3</dc3.common.version>
+        <dc3.common.web.version>2023.1.3</dc3.common.web.version>
+        <dc3.common.feign.version>2023.1.3</dc3.common.feign.version>
+        <dc3.common.mysql.version>2023.1.3</dc3.common.mysql.version>
+        <dc3.common.redis.version>2023.1.3</dc3.common.redis.version>
+        <dc3.common.mongo.version>2023.1.3</dc3.common.mongo.version>
+        <dc3.common.rabbitmq.version>2023.1.3</dc3.common.rabbitmq.version>
+        <dc3.common.quartz.version>2023.1.3</dc3.common.quartz.version>
+        <dc3.common.thread.version>2023.1.3</dc3.common.thread.version>
+        <dc3.common.model.version>2023.1.3</dc3.common.model.version>
+        <dc3.common.public.version>2023.1.3</dc3.common.public.version>
+        <dc3.common.constant.version>2023.1.3</dc3.common.constant.version>
+        <dc3.common.exception.version>2023.1.3</dc3.common.exception.version>
+        <dc3.common.log.version>2023.1.3</dc3.common.log.version>
+        <dc3.common.api.version>2023.1.3</dc3.common.api.version>
+
+        <!-- DC3 Api 相关 -->
+        <dc3.api.version>2023.1.3</dc3.api.version>
+        <dc3.api.auth.version>2023.1.3</dc3.api.auth.version>
+        <dc3.api.data.version>2023.1.3</dc3.api.data.version>
+        <dc3.api.manager.version>2023.1.3</dc3.api.manager.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -98,6 +105,9 @@
         <milo.version>0.6.8</milo.version>
         <modbus.version>3.1.0</modbus.version>
         <netty.version>4.1.85.Final</netty.version>
+        <grpc.version>1.53.0</grpc.version>
+        <grpc.spring.boot.version>2.14.0.RELEASE</grpc.spring.boot.version>
+        <protoc.version>3.22.0</protoc.version>
         <j.interop.version>2.0.4</j.interop.version>
         <bouncycastle.version>1.46</bouncycastle.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
@@ -110,6 +120,8 @@
         <hutool.version>5.8.12</hutool.version>
 
         <!-- Plugin 相关 -->
+        <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
+        <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
         <maven.gpg.plugin>3.0.1</maven.gpg.plugin>
         <maven.source.plugin>3.2.1</maven.source.plugin>
         <maven.javadoc.plugin>3.4.1</maven.javadoc.plugin>
@@ -174,14 +186,14 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>${spring.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
+                <version>${spring.cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -313,6 +325,57 @@
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
                 <version>${netty.version}</version>
+            </dependency>
+
+            <!-- gRpc 依赖 -->
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-bom</artifactId>
+                <version>${grpc.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- gRpc -->
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-netty</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+
+            <!-- gRpc Protobuf -->
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-protobuf</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+
+            <!-- gRpc Stub -->
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-stub</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+
+            <!-- gRpc Server + Client -->
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-spring-boot-starter</artifactId>
+                <version>${grpc.spring.boot.version}</version>
+            </dependency>
+
+            <!-- gRpc Server -->
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-server-spring-boot-starter</artifactId>
+                <version>${grpc.spring.boot.version}</version>
+            </dependency>
+
+            <!-- gRpc Client -->
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-client-spring-boot-starter</artifactId>
+                <version>${grpc.spring.boot.version}</version>
             </dependency>
 
             <!-- Java Interop 相关 -->
@@ -504,6 +567,13 @@
                 <artifactId>dc3-common-log</artifactId>
                 <version>${dc3.common.log.version}</version>
             </dependency>
+
+            <!-- DC3 Common Api -->
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-api</artifactId>
+                <version>${dc3.common.api.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -523,6 +593,17 @@
             <id>spring</id>
             <name>Aliyun Spring Repository</name>
             <url>https://maven.aliyun.com/repository/spring</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>maven</id>
+            <name>Maven Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -630,7 +711,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>${spring-boot.version}</version>
+                    <version>${spring.boot.version}</version>
                     <configuration>
                         <finalName>${project.build.finalName}</finalName>
                     </configuration>
@@ -652,6 +733,28 @@
                         <source>${java.version}</source>
                         <encoding>${project.build.sourceEncoding}</encoding>
                     </configuration>
+                </plugin>
+                <!-- Protobuf 插件 -->
+                <plugin>
+                    <groupId>org.xolstice.maven.plugins</groupId>
+                    <artifactId>protobuf-maven-plugin</artifactId>
+                    <version>${protobuf.plugin.version}</version>
+                    <configuration>
+                        <pluginId>grpc-java</pluginId>
+                        <protoSourceRoot>src/main/protobuf</protoSourceRoot>
+                        <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}
+                        </protocArtifact>
+                        <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+                        </pluginArtifact>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>compile</goal>
+                                <goal>compile-custom</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <!-- GPG 插件 -->
                 <plugin>
@@ -712,6 +815,7 @@
                             <nonFilteredFileExtension>key</nonFilteredFileExtension>
                             <nonFilteredFileExtension>crt</nonFilteredFileExtension>
                             <nonFilteredFileExtension>p12</nonFilteredFileExtension>
+                            <nonFilteredFileExtension>proto</nonFilteredFileExtension>
                         </nonFilteredFileExtensions>
                     </configuration>
                 </plugin>
