--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.1.6</version>
+    <version>2023.1.7</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -60,34 +60,34 @@
         <spring.cloud.version>2021.0.6</spring.cloud.version>
 
         <!-- DC3 Center 相关 -->
-        <dc3.center.register.eureka.client.version>2023.1.6</dc3.center.register.eureka.client.version>
-        <dc3.center.register.nacos.client.version>2023.1.6</dc3.center.register.nacos.client.version>
+        <dc3.center.register.eureka.client.version>2023.1.7</dc3.center.register.eureka.client.version>
+        <dc3.center.register.nacos.client.version>2023.1.7</dc3.center.register.nacos.client.version>
 
         <!-- DC3 Driver 相关 -->
-        <dc3.driver.sdk.version>2023.1.6</dc3.driver.sdk.version>
+        <dc3.driver.sdk.version>2023.1.7</dc3.driver.sdk.version>
 
         <!-- DC3 Common 相关 -->
-        <dc3.common.version>2023.1.6</dc3.common.version>
-        <dc3.common.web.version>2023.1.6</dc3.common.web.version>
-        <dc3.common.feign.version>2023.1.6</dc3.common.feign.version>
-        <dc3.common.mysql.version>2023.1.6</dc3.common.mysql.version>
-        <dc3.common.redis.version>2023.1.6</dc3.common.redis.version>
-        <dc3.common.mongo.version>2023.1.6</dc3.common.mongo.version>
-        <dc3.common.rabbitmq.version>2023.1.6</dc3.common.rabbitmq.version>
-        <dc3.common.quartz.version>2023.1.6</dc3.common.quartz.version>
-        <dc3.common.thread.version>2023.1.6</dc3.common.thread.version>
-        <dc3.common.model.version>2023.1.6</dc3.common.model.version>
-        <dc3.common.public.version>2023.1.6</dc3.common.public.version>
-        <dc3.common.constant.version>2023.1.6</dc3.common.constant.version>
-        <dc3.common.exception.version>2023.1.6</dc3.common.exception.version>
-        <dc3.common.log.version>2023.1.6</dc3.common.log.version>
-        <dc3.common.api.version>2023.1.6</dc3.common.api.version>
+        <dc3.common.version>2023.1.7</dc3.common.version>
+        <dc3.common.web.version>2023.1.7</dc3.common.web.version>
+        <dc3.common.feign.version>2023.1.7</dc3.common.feign.version>
+        <dc3.common.mysql.version>2023.1.7</dc3.common.mysql.version>
+        <dc3.common.redis.version>2023.1.7</dc3.common.redis.version>
+        <dc3.common.mongo.version>2023.1.7</dc3.common.mongo.version>
+        <dc3.common.rabbitmq.version>2023.1.7</dc3.common.rabbitmq.version>
+        <dc3.common.quartz.version>2023.1.7</dc3.common.quartz.version>
+        <dc3.common.thread.version>2023.1.7</dc3.common.thread.version>
+        <dc3.common.model.version>2023.1.7</dc3.common.model.version>
+        <dc3.common.public.version>2023.1.7</dc3.common.public.version>
+        <dc3.common.constant.version>2023.1.7</dc3.common.constant.version>
+        <dc3.common.exception.version>2023.1.7</dc3.common.exception.version>
+        <dc3.common.log.version>2023.1.7</dc3.common.log.version>
+        <dc3.common.api.version>2023.1.7</dc3.common.api.version>
 
         <!-- DC3 Api 相关 -->
-        <dc3.api.version>2023.1.6</dc3.api.version>
-        <dc3.api.auth.version>2023.1.6</dc3.api.auth.version>
-        <dc3.api.data.version>2023.1.6</dc3.api.data.version>
-        <dc3.api.manager.version>2023.1.6</dc3.api.manager.version>
+        <dc3.api.version>2023.1.7</dc3.api.version>
+        <dc3.api.auth.version>2023.1.7</dc3.api.auth.version>
+        <dc3.api.data.version>2023.1.7</dc3.api.data.version>
+        <dc3.api.manager.version>2023.1.7</dc3.api.manager.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -147,10 +147,39 @@
             </properties>
         </profile>
         <profile>
-            <id>prod</id>
+            <id>pre</id>
             <properties>
-                <NODE_ENV>prod</NODE_ENV>
+                <NODE_ENV>pre</NODE_ENV>
             </properties>
+        </profile>
+        <profile>
+            <id>pro</id>
+            <properties>
+                <NODE_ENV>pro</NODE_ENV>
+            </properties>
+        </profile>
+        <profile>
+            <id>deploy</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
@@ -717,14 +746,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-            </plugin>
         </plugins>
 
         <pluginManagement>
@@ -849,6 +870,9 @@
                             <nonFilteredFileExtension>crt</nonFilteredFileExtension>
                             <nonFilteredFileExtension>p12</nonFilteredFileExtension>
                             <nonFilteredFileExtension>proto</nonFilteredFileExtension>
+                            <nonFilteredFileExtension>json</nonFilteredFileExtension>
+                            <nonFilteredFileExtension>xls</nonFilteredFileExtension>
+                            <nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
                         </nonFilteredFileExtensions>
                     </configuration>
                 </plugin>
