--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
         <spring-data-mongodb.version>3.4.10</spring-data-mongodb.version>
         <spring.cloud.nacos.version>2021.0.4.0</spring.cloud.nacos.version>
         <commons-fileupload.version>1.4</commons-fileupload.version>
+        <commons.io.version>2.11.0</commons.io.version>
         <mybatis.plus.version>3.5.3.1</mybatis.plus.version>
         <jackson.version>2.14.2</jackson.version>
         <velocity.version>2.3</velocity.version>
@@ -438,6 +439,13 @@
                 <groupId>com.influxdb</groupId>
                 <artifactId>influxdb-client-java</artifactId>
                 <version>${influxdb.version}</version>
+            </dependency>
+
+            <!-- Commons IO -->
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons.io.version}</version>
             </dependency>
 
             <!-- File Upload -->
