--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>3.2.4-SNAPSHOT</version>
+    <version>2023.4.0</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -56,7 +56,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Spring 相关-->
-        <spring.boot.version>2.7.9</spring.boot.version>
+        <spring.boot.version>2.7.10</spring.boot.version>
         <spring.cloud.version>2021.0.6</spring.cloud.version>
 
         <!-- DC3 Center 相关 -->
@@ -64,31 +64,31 @@
         <dc3.center.register.nacos.client.version>2023.1.9</dc3.center.register.nacos.client.version>
 
         <!-- DC3 Driver 相关 -->
-        <dc3.driver.sdk.version>2023.2.3</dc3.driver.sdk.version>
+        <dc3.driver.sdk.version>2023.4.0</dc3.driver.sdk.version>
 
         <!-- DC3 Common 相关 -->
-        <dc3.common.version>2023.2.3</dc3.common.version>
-        <dc3.common.web.version>2023.2.3</dc3.common.web.version>
-        <dc3.common.feign.version>2023.2.3</dc3.common.feign.version>
-        <dc3.common.mysql.version>2023.2.3</dc3.common.mysql.version>
-        <dc3.common.redis.version>2023.2.3</dc3.common.redis.version>
-        <dc3.common.mongo.version>2023.2.3</dc3.common.mongo.version>
-        <dc3.common.rabbitmq.version>2023.2.3</dc3.common.rabbitmq.version>
-        <dc3.common.mqtt.version>2023.2.3</dc3.common.mqtt.version>
-        <dc3.common.quartz.version>2023.2.3</dc3.common.quartz.version>
-        <dc3.common.thread.version>2023.2.3</dc3.common.thread.version>
-        <dc3.common.model.version>2023.2.3</dc3.common.model.version>
-        <dc3.common.public.version>2023.2.3</dc3.common.public.version>
-        <dc3.common.constant.version>2023.2.3</dc3.common.constant.version>
-        <dc3.common.exception.version>2023.2.3</dc3.common.exception.version>
-        <dc3.common.log.version>2023.2.3</dc3.common.log.version>
-        <dc3.common.api.version>2023.2.3</dc3.common.api.version>
+        <dc3.common.version>2023.4.0</dc3.common.version>
+        <dc3.common.web.version>2023.4.0</dc3.common.web.version>
+        <dc3.common.feign.version>2023.4.0</dc3.common.feign.version>
+        <dc3.common.mysql.version>2023.4.0</dc3.common.mysql.version>
+        <dc3.common.redis.version>2023.4.0</dc3.common.redis.version>
+        <dc3.common.mongo.version>2023.4.0</dc3.common.mongo.version>
+        <dc3.common.rabbitmq.version>2023.4.0</dc3.common.rabbitmq.version>
+        <dc3.common.mqtt.version>2023.4.0</dc3.common.mqtt.version>
+        <dc3.common.quartz.version>2023.4.0</dc3.common.quartz.version>
+        <dc3.common.thread.version>2023.4.0</dc3.common.thread.version>
+        <dc3.common.model.version>2023.4.0</dc3.common.model.version>
+        <dc3.common.public.version>2023.4.0</dc3.common.public.version>
+        <dc3.common.constant.version>2023.4.0</dc3.common.constant.version>
+        <dc3.common.exception.version>2023.4.0</dc3.common.exception.version>
+        <dc3.common.log.version>2023.4.0</dc3.common.log.version>
+        <dc3.common.api.version>2023.4.0</dc3.common.api.version>
 
         <!-- DC3 Api 相关 -->
-        <dc3.api.version>2023.2.3</dc3.api.version>
-        <dc3.api.auth.version>2023.2.3</dc3.api.auth.version>
-        <dc3.api.data.version>2023.2.3</dc3.api.data.version>
-        <dc3.api.manager.version>2023.2.3</dc3.api.manager.version>
+        <dc3.api.version>2023.4.0</dc3.api.version>
+        <dc3.api.auth.version>2023.4.0</dc3.api.auth.version>
+        <dc3.api.data.version>2023.4.0</dc3.api.data.version>
+        <dc3.api.manager.version>2023.4.0</dc3.api.manager.version>
 
         <!-- 其他依赖-->
         <spring-oauth2.version>2.5.2.RELEASE</spring-oauth2.version>
@@ -96,6 +96,7 @@
         <spring.cloud.nacos.version>2021.0.4.0</spring.cloud.nacos.version>
         <commons-fileupload.version>1.4</commons-fileupload.version>
         <commons.io.version>2.11.0</commons.io.version>
+        <commons.lang3.version>3.12.0</commons.lang3.version>
         <mybatis.plus.version>3.5.3.1</mybatis.plus.version>
         <jackson.version>2.14.2</jackson.version>
         <velocity.version>2.3</velocity.version>
@@ -446,6 +447,13 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons.io.version}</version>
+            </dependency>
+
+            <!-- Commons Lang3 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang3.version}</version>
             </dependency>
 
             <!-- File Upload -->
