--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.4.0</version>
+    <version>2023.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -60,8 +60,8 @@
         <spring.cloud.version>2021.0.6</spring.cloud.version>
 
         <!-- DC3 Center 相关 -->
-        <dc3.center.register.eureka.client.version>2023.1.9</dc3.center.register.eureka.client.version>
-        <dc3.center.register.nacos.client.version>2023.1.9</dc3.center.register.nacos.client.version>
+        <dc3.center.register.eureka.client.version>2023.4.0</dc3.center.register.eureka.client.version>
+        <dc3.center.register.nacos.client.version>2023.4.0</dc3.center.register.nacos.client.version>
 
         <!-- DC3 Driver 相关 -->
         <dc3.driver.sdk.version>2023.4.0</dc3.driver.sdk.version>
