--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.4.0-SNAPSHOT</version>
+    <version>2023.4.0</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
