--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>io.github.pnoker</groupId>
     <artifactId>dc3-parent</artifactId>
     <name>${project.artifactId}</name>
-    <version>2023.4.0</version>
+    <version>2023.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <inceptionYear>2016-2022</inceptionYear>
@@ -650,6 +650,13 @@
             <dependency>
                 <groupId>io.github.pnoker</groupId>
                 <artifactId>dc3-common-api</artifactId>
+                <version>${dc3.common.api.version}</version>
+            </dependency>
+
+            <!-- DC3 Common Auth -->
+            <dependency>
+                <groupId>io.github.pnoker</groupId>
+                <artifactId>dc3-common-auth</artifactId>
                 <version>${dc3.common.api.version}</version>
             </dependency>
         </dependencies>
